[package]
name = "binary-util-derive"
version = "0.1.1"
edition = "2021"
authors = ["NetrexMC"]
include = ["src/**/*", "README.md"]
description = "Proc Macros for binary-util"
license = "Apache-2.0"
repository = "https://github.com/NetrexMC/binary-utils"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.8.1"
syn = { version = "2.0.13", features = ["full"] }
